ini on androidApp

--- a/GotApprovedAndroid/src/main/res/values/strings.xml
+++ b/GotApprovedAndroid/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
   the License.
   -->
 <resources>
-    <string name="app_name">Reply</string>
+    <string name="app_name">Got Approved</string>
     <string name="navigation_drawer">Navigation Drawer</string>
     <string name="tab_inbox">Inbox</string>
     <string name="tab_article">Articles</string>
